Implementation of a JWT in login function Added the barer auth in the OpenAPI. Having to implement a static.css for the html page
